--- a/Appendix.tex
+++ b/Appendix.tex
@@ -1,7 +1,7 @@
 \section{Science use cases and translation to ADQL queries  based on ObsCore Radio extension  }
 \label{ADQLusecases}
 
-\subsection{Science case }
+%\subsection{Science case }
 \subsection{Use case - s\_resolution\_min}
 \textit{Comparative study of low surface brightness extended emission surrounding compact sources, like for instance Virgo A.
 Select any dataset map (raster or on-the-fly) with s\_resolution\_min better than the desired spatial resolution of 1 arcmin.}
@@ -93,7 +93,7 @@ f_min > 1.0 e+9 AND
 f_max < 1.5e+9
 \end{verbatim}
 
-\subsection{Use case  frequency selection  for images }
+\subsection{Use case - frequency selection  for images }
 \textit{Any low frequency image or cube  defined as smaller than 1 Ghz.}\\ \\
 Show me all datasets satisfying:\\
 I. Product type is image or cube \\
@@ -110,7 +110,7 @@ II. higher spectral limit < 1Ghz
  
 % end section Alexandra's science case 
 
-\subsection{ visibility data product and targer object selection }
+\subsection{ use case - visibility data product and targer object selection }
 \textit{Any raw interferometry observation containing target Fornax cluster.}\\
 \\
 Show me all  observation identifiers satisfying:\\
@@ -126,33 +126,39 @@ II. Target Name = Fornax Cluster \\
 
 
 
-\subsection{Use case : maximum angular scale selection}
-\textit{Any visibility dataset around FRB 121102  where  maximum angular scale is larger than 1 minute .}\\ \\
+\subsection{Use case - maximum angular scale selection}
+\textit{Any visibility dataset Within an arcec around FRB 121102  where  maximum angular scale is larger than 1 minute .}\\ \\
 Show me all datasets satisfying:\\
 I. Product type is visibility \\
 II. Maximum angular scale  >  0.018 deg 
+III. Position within 1 arcsec of 82.99458 + 33.14794
 \begin{verbatim}
       SELECT * FROM ivoa.ObscoreRadioExtended
       WHERE dataproduct_type = 'visibility' AND
       max_angular_scale > 0.018 AND
+      max_angular_scale > 0.018 AND
       CONTAINS(POINT(s_ra,s_dec),CIRCLE(82.99458, 33.14794,0.0003)) = 1))
 \end{verbatim}
 
-\subsection{Use case : uv distribution selection}
-\textit{Any visibility data of good quality from th uv distribution point of view.}\\ \\
+\subsection{Use case - maximum angular scale selection with reasonable fidelity}
+\textit{Any visibility data within an arcsec around FRB 121102 where  maximum angular scale is larger than 1 minute  and 
+of good quality from the uv distribution point of view.}\\ \\
 Show me all datasets satisfying:\\
 I. Product type = visibility \\
-II. uv distribution filling factor  > 0.7 \\
-III. uv distribtion factor eccentricity  < 0.1 \\
-
+II. Maximum angular scale  >  0.018 deg 
+III. uv distribution filling factor  > 0.7 \\
+IV. uv distribtion factor eccentricity  < 0.1 \\
+V. Position within 1 arcsec of 82.99458 + 33.14794
 \begin{verbatim}
       SELECT * FROM ivoa.ObscoreRadioExtended
       WHERE dataproduct_type = 'visibilty' AND
+      max_angular_scale > 0.018 AND
       uv_distribution_fill > 0.7 AND
-      uv_distribution_ecc < 0.1  
+      uv_distribution_ecc < 0.1 AND 
+      CONTAINS(POINT(s_ra,s_dec),CIRCLE(82.99458, 33.14794,0.0003)) =1))
 \end{verbatim}
 
-\subsection{Use case :  time selection }
+\subsection{Use case -  time selection }
 \textit{Any timeseries obtained in beam forming mode with time resolution better than 0.1 second and time sample maximal duration smaller than 0.05 second. }\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type = beam forming\\
@@ -168,7 +174,7 @@ IIV. maximal duration per sample  < 0.05 s \\
       t_exp_max < 0.05 
 \end{verbatim}
 \todo{Below : instrument and observing modes parameters. To be completed by science cases}
-\subsection{Use case:  instrument type and mode selection }
+\subsection{Use case -  instrument type and mode selection }
 \textit{Any single dish  dataset  in raster mode around 3C 273.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish \\
@@ -184,7 +190,7 @@ IV. position inside 3 arcmin around  	187.2779159404900 +02.0523882305500
 \end{verbatim}
 
 % use case FB 
-\subsection{Use case: instrument type selection}
+\subsection{Use case - instrument type selection}
 \textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish or beam forming \\
@@ -199,7 +205,7 @@ IV. position inside 18 arcmin around 194.93502 +27.91246
 \end{verbatim}
 
 
-\subsection{Use case  instrument type and frequency selection }
+\subsection{Use case - instrument type and frequency selection }
 \textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish or beam forming \\
@@ -219,7 +225,7 @@ IV. position inside 18 arcmin around 194.93502 +27.91246
 
 
 
-\subsection{Use case: instrument parameters selection }
+\subsection{Use case - instrument parameters selection }
 \textit{Any interferometry data of good quality and significant spatial resolution from the instrumental point of view. }\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type = visibility \\
