--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -340,7 +340,7 @@ wavelength and l is the typical smallest distance in the \emph{uv} plane.
 
 As was stated above (\ref{sec:specificities}) radio astronomers use frequency quantities to characterize their datasets. Therefore we introduce three additional parameters in the extension : \emph{f\_min} and \emph{f\_max} for spectral ranges and \emph{f\_resolution} for absolute spectral resolution .
 
-\textit{To avoid inconsistency between the core attributes \emph{em\_min, em\_max} and \emph{em\_respower} and these additional quantities we suggest to compute these new quantities when building a view on top of the basic ObsCore table. The frequency attributes MUST be expressed in Khz to allow interoperability.} 
+\textit{To avoid inconsistency between the core attributes \emph{em\_min, em\_max} and \emph{em\_respower} and these additional quantities we suggest to compute these new quantities when building a view on top of the basic ObsCore table. The frequency attributes MUST be expressed in Hz to allow interoperability.} 
 
 
 \subsection{Spatial frequency coverage for visibilities  }
