--- a/Appendix.tex
+++ b/Appendix.tex
@@ -131,7 +131,7 @@ II. Target Name = Fornax Cluster \\
 \textit{Any visibility dataset Within an arcec around FRB 121102  where  maximum angular scale is larger than 1 minute .}\\ \\
 Show me all datasets satisfying:\\
 I. Product type is visibility \\
-II. Maximum angular scale  >  0.018 deg 
+II. Maximum angular scale  >  0.018 deg \\
 III. Position within 1 arcsec of 82.99458 + 33.14794
 \begin{verbatim}
       SELECT * FROM ivoa.ObscoreRadioExtended
@@ -146,7 +146,7 @@ III. Position within 1 arcsec of 82.99458 + 33.14794
 of good quality from the uv distribution point of view.}\\ \\
 Show me all datasets satisfying:\\
 I. Product type = visibility \\
-II. Maximum angular scale  >  0.018 deg 
+II. Maximum angular scale  >  0.018 deg \\
 III. uv distribution filling factor  > 0.7 \\
 IV. uv distribtion factor eccentricity  < 0.1 \\
 V. Position within 1 arcsec of 82.99458 + 33.14794
