--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -109,7 +109,7 @@ Its goal is to clarify how  ObsCore metadata  can be used in the  radio context 
 On the lower end of the radio spectrum, radio astronomers generally make use of
 frequencies for designating the spectral ranges of their observation. The standard
 ObsCore attributes \emph{em\_min, em\_max} are expressed in wavelength and are not really convenient.
-That's why we should also provide their translation into frequencies.
+That's why we should also provide a mechanism for  translation into frequencies.But this should not be done by duplicating the same information in two differentattributes. 
 
 Receivers with a (ultra)wide bandwidth, up to tens of GHz, are
 nowadays commonly used for both interferometric and Single Dish (herefater SD) radio observations.
@@ -337,9 +337,19 @@ wavelength and l is the typical smallest distance in the \emph{uv} plane.
 
 \subsection{frequency characterization}
 
-As was stated above (\ref{sec:specificities}) radio astronomers use frequency quantities to characterize their datasets. Therefore we introduce three additional parameters in the extension : \emph{f\_min} and \emph{f\_max} for spectral ranges and \emph{f\_resolution} for absolute spectral resolution .
+As was stated above (\ref{sec:specificities}) radio astronomers use frequency quantities to characterize their datasets. Therefore we introduce one additional parameters in the extension : 
+%\emph{f\_min} and \emph{f\_max} for spectral ranges and 
+\emph{f\_resolution} for absolute spectral resolution, which is a more stable parameter than the resolution power in the radio domain.
 
-\textit{To avoid inconsistency between the core attributes \emph{em\_min, em\_max} and \emph{em\_respower} and these additional quantities we suggest to compute these new quantities when building a view on top of the basic ObsCore table. The frequency attributes MUST be expressed in Hz to allow interoperability.} 
+For users willing to access spectral ranges in frequencies we can imagine several scenarii:
+\begin{itemize}
+	\item compute two free parameters \emph{f\_min} and \emph{f\_max} this way \emph{f\_min} = c / \emph{em\_max} and \emph{f\_max} = c / \emph{em\_min} with c = 299 792 458 m/s
+	\item express queries and results in terms of frequencies by using the same  formulae in the ADQL queries (see \ref{sec:FreqRanges})
+
+	\item let the interface do these conversions	
+\end{itemize}
+
+%\textit{To avoid inconsistency between the core attributes \emph{em\_min, em\_max} and \emph{em\_respower} and these additional quantities we suggest to compute these new quantities when building a view on top of the basic ObsCore table. The frequency attributes MUST be expressed in Hz to allow interoperability.} 
 
 \subsection{Spatial frequency coverage for visibilities  }
 These parameters are valid for interferometry only.
@@ -421,40 +431,9 @@ response  will contain \#auxiliary  for links to these maps or plots while  the 
 
 \section{The ivoa.obscore\_radio table}
 \label{sec:implementation}
-% commented below: Markus version
-%The ObsCore Extension for Radio is accessed as a table within a TAP
-%\citep{2019ivoa.spec.0927D} service.\todo{I think we should require a
-%few UDFs on TAP services: ivo\_interval\_overlaps, ivo\_specconv}  At this
-%point, the name of this table is fixed to \verb|ivoa.obs_radio|.
-%However, in order to allow for later evolution -- which may allow
-%multiple compliant tables per service --, this name should not be used
-%for discovery (see sect.~\ref{sec:registry}).
-%
-%A TAP service that has \verb|ivoa.obs_radio| must also have a table
-%compliant to any version 1 of ObsCore, i.e., a table
-%\verb|ivoa.obscore|; the two tables must share exactly the columns such
-%that a \verb|NATURAL JOIN| will yield per-dataset rows of obscore and
-%radio extension metadata.  Which columns these are is site-specific.
-%
-%To ensure that all compliant services can execute the same queries,
-%all columns in table~\ref{tab:ExtensionAtt} must be present in such a
-%table, although any may be NULL.  Additional columns may be present, and
-%at least a foreign key into \verb|ivoa.obscore| will typcially
-%user-visible\todo{can we make rules such that such additional columns
-%will not interfere with later extensions?}.
-%
-%The intention is that clients will write queries like
-%\begin{lstlisting}
-%SELECT [any obscore and obs_radio columns or expressions]
-%FROM
-%  ivoa.obscore
-%  NATURAL JOIN ivoa.obs_radio
-%WHERE
-%  [constraints]
-%\end{lstlisting}
-The ObsCore Extension for Radio data is accessed in a table containing also ObsCore fields within a TAP
+The ObsCore Extension for Radio is accessed as a table within a TAP
 \citep{2019ivoa.spec.0927D} service.\todo{I think we should require a
-few UDFs on TAP services: ivo\_interval\_overlaps, ivo\_specconv} At this
+few UDFs on TAP services: ivo\_interval\_overlaps, ivo\_specconv}  At this
 point, the name of this table is fixed to \verb|ivoa.obscore_radio|.
 However, in order to allow for later evolution -- which may allow
 multiple compliant tables per service --, this name should not be used
@@ -462,24 +441,63 @@ for discovery (see sect.~\ref{sec:registry}).
 
 A TAP service that has \verb|ivoa.obscore_radio| must also have a table
 compliant to any version 1 of ObsCore, i.e., a table
-\verb|ivoa.obscore|; containing only the basic ObsCore attributes.
-This table can be implemented as a simple view on the \verb|ivoa.obscore_radio|
-table
+\verb|ivoa.obscore| containing only the basic ObsCore attributes.
+the two tables must share exactly the obs\_publisher\_did 
+column such
+that a \verb|NATURAL JOIN| will yield per-dataset rows of obscore and
+radio extension metadata.  
+%Which columns these are is site-specific.
 
 To ensure that all compliant services can execute the same queries,
 all columns in table~\ref{tab:ExtensionAtt} must be present in such a
-table, although any may be NULL. Additional columns may be present\todo{can we make rules such that such additional columns
+table, although any may be NULL. At least a foreign key into \verb|ivoa.obscore| will typically
+make the extension table user-visible. Additional free columns (such as f\_min, f\_max) may also
+be added.\todo{can we make rules such that such additional columns
 will not interfere with later extensions?}.
 
 The intention is that clients will write queries like
 \begin{lstlisting}
-SELECT [any obscore and obs_radio columns or expressions]
+SELECT [any obscore and obscore_radio columns or expressions]
 FROM
-ivoa.obscore_radio
-
+  ivoa.obscore
+  NATURAL JOIN ivoa.obscore_radio
 WHERE
-[constraints]
+  [constraints]
 \end{lstlisting}
+
+It is also possible to include a view performing this JOIN in the ivoa schema in
+order to make it directly available for service users. 
+
+% commented below: FB version
+%The ObsCore Extension for Radio data is accessed in a table containing also ObsCore fields within a TAP
+%\citep{2019ivoa.spec.0927D} service.\todo{I think we should require a
+%few UDFs on TAP services: ivo\_interval\_overlaps, ivo\_specconv} At this
+%point, the name of this table is fixed to \verb|ivoa.obscore_radio|.
+%However, in order to allow for later evolution -- which may allow
+%multiple compliant tables per service --, this name should not be used
+%for discovery (see sect.~\ref{sec:registry}).
+%
+%A TAP service that has \verb|ivoa.obscore_radio| must also have a table
+%compliant to any version 1 of ObsCore, i.e., a table
+%\verb|ivoa.obscore|; containing only the basic ObsCore attributes.
+%This table can be implemented as a simple view on the \verb|ivoa.obscore_radio|
+%table
+%
+%To ensure that all compliant services can execute the same queries,
+%all columns in table~\ref{tab:ExtensionAtt} must be present in such a
+%table, although any may be NULL. Additional columns may be present\todo{can we make rules such that such additional columns
+%
+%will not interfere with later extensions?}.
+%
+%The intention is that clients will write queries like
+%\begin{lstlisting}
+%SELECT [any obscore and obs_radio columns or expressions]
+%FROM
+%ivoa.obscore_radio
+%
+%WHERE
+%[constraints]
+%\end{lstlisting}
 % commented : Markus initial PR
 %without having to know the exact foreign key(s) in use on any given
 %service.  This means that while one service can opt to join on
@@ -516,10 +534,10 @@ WHERE
 \sptablerule
 \texttt{s\_maximum\_angular\_scale}&\texttt{maximum scale in dataset, shortest baseline and  frequency dependant}&\texttt{Char.SpatialAxis.\newline Resolution.Scale.\newline Limits.HiLim}&{phys.angSize;stat.max}&arcsec&interferometry\cr
 \sptablerule
-\texttt{f\_min}&\texttt{spectral coverage min in frequency}&\texttt{Char.SpectralAxis.\newline Coverage.Bounds\newline Limits.LoLim}&{em.freq;stat.min}&Mhz&radio\cr
-\sptablerule
-\texttt{f\_max}&\texttt{spectral coverage max in frequency}&\texttt{Char.SpectralAxis.\newline Coverage.Bounds\newline Limits.HiLim}&{em.freq;stat.max}&Mhz&radio\cr
-\sptablerule
+%\texttt{f\_min}&\texttt{spectral coverage min in frequency}&\texttt{Char.SpectralAxis.\newline Coverage.Bounds\newline Limits.LoLim}&{em.freq;stat.min}&Mhz&radio\cr
+%\sptablerule
+%\texttt{f\_max}&\texttt{spectral coverage max in frequency}&\texttt{Char.SpectralAxis.\newline Coverage.Bounds\newline Limits.HiLim}&{em.freq;stat.max}&Mhz&radio\cr
+%\sptablerule
 \texttt{f\_resolution}&\texttt{absolute spectral resolution in frequency}&\texttt{Char.SpectralAxis.\newline Coverage.Bounds\newline Limits.HiLim}&{em.freq;stat.max}&Khz&radio\cr
 \sptablerule
 \texttt{t\_exp\_min}&\texttt{minimum integration time per sample}&\texttt{Char.TimeAxis.\newline Sampling.Extent\newline LoLim}&{time.duration;obs.exposure;\newline stat.min}&s&radio\cr
@@ -642,6 +660,10 @@ acceptable? Or should we require pure radio coverage?}
 A sample registry record for an obscore\_radio table comes with this
 specification\footnote{\auxiliaryurl{sample-record.xml}}.
 
+In order to find out directly if the ivoa schema contains the radio extension
+the schema MUST be defined in the registry with the utype
+\hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore#obscore-radioExt-1.0}}
+
 To obtain access URLs of all TAP services that have compliant tables
 together with their table names (which in this major version are fixed
 to \verb|ivoa.obscore_radio|), use a RegTAP \citep{2019ivoa.spec.1011D}
@@ -656,6 +678,20 @@ WHERE
 standard_id LIKE 'ivo://ivoa.net/std/tap%'
 AND intf_role='std'
 AND table_utype LIKE 'ivo://ivoa.net/std/ObsCore#radioExt-%'
+\end{lstlisting}
+
+Alternatively the schema and tables can be discovered this way
+
+\begin{lstlisting}
+SELECT DISTINCT(access_url), table_name, schema_name
+FROM rr.res_table
+NATURAL JOIN rr.capability
+NATURAL JOIN rr.interface
+NATURAL JOIN rr.res_schema
+WHERE 
+standard_id LIKE 'ivo://ivoa.net/std/tap%'
+AND intf_role='std'
+AND schema_utype LIKE 'ivo://ivoa.net/std/ObsCore#obscore-radioExt-%'
 \end{lstlisting}
 
 \appendix
