--- a/Appendix.tex
+++ b/Appendix.tex
@@ -215,7 +215,7 @@ IIV. maximal duration per sample  < 0.05 s \\
       t_resolution < 0.1 AND
       t_exp_max < 0.05 
 \end{verbatim}
-\subsection{\texit{Below : instrument and observing modes parameters. To be completed by science cases}}
+\subsection{\textit{Below : instrument and observing modes parameters. To be completed by science cases}}
 \subsection{Use case -  instrument type and mode selection }
 \textit{Any single dish  dataset  in raster mode around 3C 273.}\\ \\
 Show me all datasets satisfying:\\
